Fix report code

--- a/report/report.tex
+++ b/report/report.tex
@@ -163,7 +163,7 @@ def getNextPosition(oldPos, direction):
 
 \lstset{language=Python}
 \begin{lstlisting}[frame=single]
-def getNextState(self, oldPos, dir, pegSol):
+def getNextState(self, oldPos, direction, pegSol):
 	"""
 	Return a child node of the current one, created by a
 	given valid move. The given game has its count of
